@@ -1,0 +1,9 @@
+Title: EC condition: Fixed default value of rule id selection
+Level: 1
+Component: notifications
+Compatible: compat
+Version: 1.2.8p12
+Date: 1474017331
+Class: fix
+
+
