@@ -9,6 +9,9 @@
     * 3874 FIX: fixed graphs displaying wrong labels
     * 3858 FIX: Fixed crash report and snapshot creation when using Python <2.5 (e.g. with CentOS 5)
 
+    Notifications:
+    * 3860 FIX: EC condition: Fixed default value of rule id selection
+
 
 1.2.8p11:
     Checks & Agents:
